Teste de alteração

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
  <h1>Olá, Mundo!</h1>
  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, repudiandae itaque natus quia rem quis labore, animi officiis unde earum vel rerum neque! Iste, obcaecati. Enim iste laboriosam ullam voluptate?</p>  
  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus atque excepturi dignissimos commodi laborum exercitationem adipisci porro repudiandae est nesciunt, quaerat perferendis qui optio cum nobis debitis voluptatem asperiores nam.</p> 
+ <p>Teste de alterações</p>
 </body>
 </html>
